- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    Qt Creator 4.15.2
 - 
    None
 
- 
        a2bc154ed0e38d164dd7141d1c44be299f3051e7 (qt-creator/qt-creator/5.0)
 
Steps to reproduce:
1. Open any project and do twelve searches -> do it like the 1st step for QTCREATORBUG-25713
2. Choose the last item from the history list
3. Click "Search again" button on yellow bar -> crash after a while.
Call stack:
#0 0x00007f5c3624f2a2 in raise () from /lib64/libc.so.6 #1 0x00007f5c362388a4 in abort () from /lib64/libc.so.6 #2 0x00007f5c36836f47 in qt_message_fatal (context=..., message=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/global/qlogging.cpp:1914 #3 0x00007f5c3683336a in QMessageLogger::fatal (this=0x7ffec7bd8aa0, msg=0x7f5c36be1fb0 "ASSERT failure in %s: \"%s\", file %s, line %d") at /home/jarek/dev/qt-515/qtbase/src/corelib/global/qlogging.cpp:893 #4 0x00007f5c3682a8b2 in qt_assert_x (where=0x7f5c1c4427c3 "QList<T>::at", what=0x7f5c1c4427b0 "index out of range", file=0x7f5c1c442778 "/home/jarek/dev/qt-515/qtbase/src/corelib/tools/qlist.h", line=571) at /home/jarek/dev/qt-515/qtbase/src/corelib/global/qglobal.cpp:3366 #5 0x00007f5c1c2cc130 in QList<Core::Internal::SearchResultWidget*>::at (this=0x1438f78, i=11) at /home/jarek/dev/qt-515/qtbase/src/corelib/tools/qlist.h:571 #6 0x00007f5c1c2cabd2 in Core::Internal::SearchResultWindowPrivate::updateFilterButton (this=0x1438f60) at /home/jarek/dev/creator-5/src/plugins/coreplugin/find/searchresultwindow.cpp:641 #7 0x00007f5c1c2cf991 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::Internal::SearchResultWindowPrivate::*)()>::call(void (Core::Internal::SearchResultWindowPrivate::*)(), Core::Internal::SearchResultWindowPrivate*, void**) (f=(void (Core::Internal::SearchResultWindowPrivate::*)(Core::Internal::SearchResultWindowPrivate * const)) 0x7f5c1c2cab8a <Core::Internal::SearchResultWindowPrivate::updateFilterButton()>, o=0x1438f60, arg=0x7ffec7bd8da0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #8 0x00007f5c1c2cf00f in QtPrivate::FunctionPointer<void (Core::Internal::SearchResultWindowPrivate::*)()>::call<QtPrivate::List<>, void>(void (Core::Internal::SearchResultWindowPrivate::*)(), Core::Internal::SearchResultWindowPrivate*, void**) (f=(void (Core::Internal::SearchResultWindowPrivate::*)(Core::Internal::SearchResultWindowPrivate * const)) 0x7f5c1c2cab8a <Core::Internal::SearchResultWindowPrivate::updateFilterButton()>, o=0x1438f60, arg=0x7ffec7bd8da0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #9 0x00007f5c1c2ce19b in QtPrivate::QSlotObject<void (Core::Internal::SearchResultWindowPrivate::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x1449cc0, r=0x1438f60, a=0x7ffec7bd8da0, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #10 0x00007f5c36ac1cdf in QtPrivate::QSlotObjectBase::call (this=0x1449cc0, r=0x1438f60, a=0x7ffec7bd8da0) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #11 0x00007f5c36b013cd in doActivate<false> (sender=0x143aea0, signal_index=7, argv=0x7ffec7bd8da0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #12 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x143aea0, m=0x7f5c3829eec0 <QStackedWidget::staticMetaObject>, local_signal_index=0, argv=0x7ffec7bd8da0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #13 0x00007f5c37d7a376 in QStackedWidget::currentChanged (this=0x143aea0, _t1=11) at .moc/moc_qstackedwidget.cpp:219 #14 0x00007f5c37d79f61 in QStackedWidget::qt_static_metacall (_o=0x143aea0, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7ffec7bd8fc0) at .moc/moc_qstackedwidget.cpp:101 #15 0x00007f5c36b01466 in doActivate<false> (sender=0x143a5f0, signal_index=4, argv=0x7ffec7bd8fc0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3898 #16 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x143a5f0, m=0x7f5c3828f5e0 <QStackedLayout::staticMetaObject>, local_signal_index=1, argv=0x7ffec7bd8fc0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #17 0x00007f5c37b72064 in QStackedLayout::currentChanged (this=0x143a5f0, _t1=11) at .moc/moc_qstackedlayout.cpp:227 #18 0x00007f5c37b7125e in QStackedLayout::setCurrentIndex (this=0x143a5f0, index=11) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qstackedlayout.cpp:353 #19 0x00007f5c37b70eca in QStackedLayout::takeAt (this=0x143a5f0, index=12) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qstackedlayout.cpp:275 #20 0x00007f5c37b691d9 in QLayout::removeWidget (this=0x143a5f0, widget=0x7f5ba01aba90) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qlayout.cpp:1398 #21 0x00007f5c37d79cd1 in QStackedWidget::removeWidget (this=0x143aea0, widget=0x7f5ba01aba90) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qstackedwidget.cpp:197 #22 0x00007f5c1c2c98ab in Core::Internal::SearchResultWindowPrivate::moveWidgetToTop (this=0x1438f60) at /home/jarek/dev/creator-5/src/plugins/coreplugin/find/searchresultwindow.cpp:230 #23 0x00007f5c1c2cf991 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::Internal::SearchResultWindowPrivate::*)()>::call(void (Core::Internal::SearchResultWindowPrivate::*)(), Core::Internal::SearchResultWindowPrivate*, void**) (f=(void (Core::Internal::SearchResultWindowPrivate::*)(Core::Internal::SearchResultWindowPrivate * const)) 0x7f5c1c2c97e8 <Core::Internal::SearchResultWindowPrivate::moveWidgetToTop()>, o=0x1438f60, arg=0x7ffec7bd92d8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #24 0x00007f5c1c2cf00f in QtPrivate::FunctionPointer<void (Core::Internal::SearchResultWindowPrivate::*)()>::call<QtPrivate::List<>, void>(void (Core::Internal::SearchResultWindowPrivate::*)(), Core::Internal::SearchResultWindowPrivate*, void**) (f=(void (Core::Internal::SearchResultWindowPrivate::*)(Core::Internal::SearchResultWindowPrivate * const)) 0x7f5c1c2c97e8 <Core::Internal::SearchResultWindowPrivate::moveWidgetToTop()>, o=0x1438f60, arg=0x7ffec7bd92d8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #25 0x00007f5c1c2ce19b in QtPrivate::QSlotObject<void (Core::Internal::SearchResultWindowPrivate::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x3992de0, r=0x1438f60, a=0x7ffec7bd92d8, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #26 0x00007f5c36ac1cdf in QtPrivate::QSlotObjectBase::call (this=0x3992de0, r=0x1438f60, a=0x7ffec7bd92d8) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #27 0x00007f5c36b013cd in doActivate<false> (sender=0x7f5ba01aba90, signal_index=13, argv=0x7ffec7bd92d8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #28 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x7f5ba01aba90, m=0x7f5c1c595700 <Core::Internal::SearchResultWidget::staticMetaObject>, local_signal_index=6, argv=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #29 0x00007f5c1c168a33 in Core::Internal::SearchResultWidget::restarted (this=0x7f5ba01aba90) at src/plugins/coreplugin/Core_autogen/KJSVWYKJNP/moc_searchresultwidget.cpp:340 #30 0x00007f5c1c2c6b57 in Core::Internal::SearchResultWidget::restart (this=0x7f5ba01aba90) at /home/jarek/dev/creator-5/src/plugins/coreplugin/find/searchresultwidget.cpp:425 #31 0x00007f5c1c2cb6ae in Core::SearchResult::restart (this=0x3819440) at /home/jarek/dev/creator-5/src/plugins/coreplugin/find/searchresultwindow.cpp:873 #32 0x00007f5c10913472 in TextEditor::BaseFileFind::searchAgain (this=0x14ccab0, search=0x3819440) at /home/jarek/dev/creator-5/src/plugins/texteditor/basefilefind.cpp:477 #33 0x00007f5c10910dba in operator() (__closure=0x38b8c20) at /home/jarek/dev/creator-5/src/plugins/texteditor/basefilefind.cpp:284 #34 0x00007f5c10914e7f in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, TextEditor::BaseFileFind::runNewSearch(const QString&, Core::FindFlags, Core::SearchResultWindow::SearchMode)::<lambda()> >::call(struct {...} &, void **) (f=..., arg=0x7ffec7bd95e8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:146 #35 0x00007f5c10914d4b in QtPrivate::Functor<TextEditor::BaseFileFind::runNewSearch(const QString&, Core::FindFlags, Core::SearchResultWindow::SearchMode)::<lambda()>, 0>::call<QtPrivate::List<>, void>(struct {...} &, void *, void **) (f=..., arg=0x7ffec7bd95e8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:256 #36 0x00007f5c10914a3e in QtPrivate::QFunctorSlotObject<TextEditor::BaseFileFind::runNewSearch(const QString&, Core::FindFlags, Core::SearchResultWindow::SearchMode)::<lambda()>, 0, QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void **, bool *) (which=1, this_=0x38b8c10, r=0x14ccab0, a=0x7ffec7bd95e8, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:443 #37 0x00007f5c36ac1cdf in QtPrivate::QSlotObjectBase::call (this=0x38b8c10, r=0x14ccab0, a=0x7ffec7bd95e8) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #38 0x00007f5c36b013cd in doActivate<false> (sender=0x3819440, signal_index=10, argv=0x7ffec7bd95e8) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #39 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x3819440, m=0x7f5c1c595780 <Core::SearchResult::staticMetaObject>, local_signal_index=7, argv=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #40 0x00007f5c1c16982d in Core::SearchResult::searchAgainRequested (this=0x3819440) at src/plugins/coreplugin/Core_autogen/KJSVWYKJNP/moc_searchresultwindow.cpp:474 #41 0x00007f5c1c2cfe04 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::SearchResult::*)()>::call(void (Core::SearchResult::*)(), Core::SearchResult*, void**) (f=(void (Core::SearchResult::*)(Core::SearchResult * const)) 0x7f5c1c169804 <Core::SearchResult::searchAgainRequested()>, o=0x3819440, arg=0x7ffec7bd9878) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #42 0x00007f5c1c2cf609 in QtPrivate::FunctionPointer<void (Core::SearchResult::*)()>::call<QtPrivate::List<>, void>(void (Core::SearchResult::*)(), Core::SearchResult*, void**) (f=(void (Core::SearchResult::*)(Core::SearchResult * const)) 0x7f5c1c169804 <Core::SearchResult::searchAgainRequested()>, o=0x3819440, arg=0x7ffec7bd9878) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #43 0x00007f5c1c2ced01 in QtPrivate::QSlotObject<void (Core::SearchResult::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x38788e0, r=0x3819440, a=0x7ffec7bd9878, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #44 0x00007f5c36ac1cdf in QtPrivate::QSlotObjectBase::call (this=0x38788e0, r=0x3819440, a=0x7ffec7bd9878) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #45 0x00007f5c36b013cd in doActivate<false> (sender=0x7f5ba01aba90, signal_index=10, argv=0x7ffec7bd9878) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #46 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x7f5ba01aba90, m=0x7f5c1c595700 <Core::Internal::SearchResultWidget::staticMetaObject>, local_signal_index=3, argv=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #47 0x00007f5c1c168987 in Core::Internal::SearchResultWidget::searchAgainRequested (this=0x7f5ba01aba90) at src/plugins/coreplugin/Core_autogen/KJSVWYKJNP/moc_searchresultwidget.cpp:321 #48 0x00007f5c1c2c70b0 in Core::Internal::SearchResultWidget::searchAgain (this=0x7f5ba01aba90) at /home/jarek/dev/creator-5/src/plugins/coreplugin/find/searchresultwidget.cpp:518 #49 0x00007f5c1c2c87ac in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (Core::Internal::SearchResultWidget::*)()>::call(void (Core::Internal::SearchResultWidget::*)(), Core::Internal::SearchResultWidget*, void**) (f=(void (Core::Internal::SearchResultWidget::*)(Core::Internal::SearchResultWidget * const)) 0x7f5c1c2c7098 <Core::Internal::SearchResultWidget::searchAgain()>, o=0x7f5ba01aba90, arg=0x7ffec7bd9c40) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:152 #50 0x00007f5c1c2c86b4 in QtPrivate::FunctionPointer<void (Core::Internal::SearchResultWidget::*)()>::call<QtPrivate::List<>, void>(void (Core::Internal::SearchResultWidget::*)(), Core::Internal::SearchResultWidget*, void**) (f=(void (Core::Internal::SearchResultWidget::*)(Core::Internal::SearchResultWidget * const)) 0x7f5c1c2c7098 <Core::Internal::SearchResultWidget::searchAgain()>, o=0x7f5ba01aba90, arg=0x7ffec7bd9c40) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:185 #51 0x00007f5c1c2c8443 in QtPrivate::QSlotObject<void (Core::Internal::SearchResultWidget::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0x37af590, r=0x7f5ba01aba90, a=0x7ffec7bd9c40, ret=0x0) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:418 #52 0x00007f5c36ac1cdf in QtPrivate::QSlotObjectBase::call (this=0x37af590, r=0x7f5ba01aba90, a=0x7ffec7bd9c40) at ../../include/QtCore/../../../../qt-515/qtbase/src/corelib/kernel/qobjectdefs_impl.h:398 #53 0x00007f5c36b013cd in doActivate<false> (sender=0x39b6ba0, signal_index=9, argv=0x7ffec7bd9c40) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3886 #54 0x00007f5c36afadc1 in QMetaObject::activate (sender=0x39b6ba0, m=0x7f5c38293660 <QAbstractButton::staticMetaObject>, local_signal_index=2, argv=0x7ffec7bd9c40) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qobject.cpp:3946 #55 0x00007f5c37c878b2 in QAbstractButton::clicked (this=0x39b6ba0, _t1=false) at .moc/moc_qabstractbutton.cpp:308 #56 0x00007f5c37c85117 in QAbstractButtonPrivate::emitClicked (this=0x1ef7ae0) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qabstractbutton.cpp:415 #57 0x00007f5c37c850a9 in QAbstractButtonPrivate::click (this=0x1ef7ae0) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qabstractbutton.cpp:408 #58 0x00007f5c37c866c6 in QAbstractButton::mouseReleaseEvent (this=0x39b6ba0, e=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qabstractbutton.cpp:1044 #59 0x00007f5c37dbc5b9 in QToolButton::mouseReleaseEvent (this=0x39b6ba0, e=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qtoolbutton.cpp:622 #60 0x00007f5c37b8aba7 in QWidget::event (this=0x39b6ba0, event=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qwidget.cpp:8659 #61 0x00007f5c37c8650a in QAbstractButton::event (this=0x39b6ba0, e=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qabstractbutton.cpp:1001 #62 0x00007f5c37dbdb79 in QToolButton::event (this=0x39b6ba0, event=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/widgets/qtoolbutton.cpp:1012 #63 0x00007f5c37b40ba7 in QApplicationPrivate::notify_helper (this=0xd59170, receiver=0x39b6ba0, e=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3637 #64 0x00007f5c37b3e72a in QApplication::notify (this=0x7ffec7bdbae0, receiver=0x39b6ba0, e=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3081 #65 0x00007f5c36ab0782 in QCoreApplication::notifyInternal2 (receiver=0x39b6ba0, event=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064 #66 0x00007f5c36ab1184 in QCoreApplication::sendSpontaneousEvent (receiver=0x39b6ba0, event=0x7ffec7bda850) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1474 #67 0x00007f5c37b3d22d in QApplicationPrivate::sendMouseEvent (receiver=0x39b6ba0, event=0x7ffec7bda850, alienWidget=0x39b6ba0, nativeWidget=0x1174310, buttonDown=0x7f5c382bca50 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2619 #68 0x00007f5c37bba289 in QWidgetWindow::handleMouseEvent (this=0x2a34390, event=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qwidgetwindow.cpp:683 #69 0x00007f5c37bb8b08 in QWidgetWindow::event (this=0x2a34390, event=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qwidgetwindow.cpp:300 #70 0x00007f5c37b40ba7 in QApplicationPrivate::notify_helper (this=0xd59170, receiver=0x2a34390, e=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:3637 #71 0x00007f5c37b3df91 in QApplication::notify (this=0x7ffec7bdbae0, receiver=0x2a34390, e=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2977 #72 0x00007f5c36ab0782 in QCoreApplication::notifyInternal2 (receiver=0x2a34390, event=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1064 #73 0x00007f5c36ab1184 in QCoreApplication::sendSpontaneousEvent (receiver=0x2a34390, event=0x7ffec7bdb380) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1474 #74 0x00007f5c37251cbf in QGuiApplicationPrivate::processMouseEvent (e=0x7f5b24a6fdc0) at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:2282 #75 0x00007f5c37250f01 in QGuiApplicationPrivate::processWindowSystemEvent (e=0x7f5b24a6fdc0) at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:2002 #76 0x00007f5c37230e77 in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:1169 #77 0x00007f5c255a2f67 in xcbSourceDispatch (source=0xe26fc0) at /home/jarek/dev/qt-515/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:105 #78 0x00007f5c335a24cf in g_main_context_dispatch () from /lib64/libglib-2.0.so.0 #79 0x00007f5c335f64e8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0 #80 0x00007f5c3359fc03 in g_main_context_iteration () from /lib64/libglib-2.0.so.0 #81 0x00007f5c36b406bc in QEventDispatcherGlib::processEvents (this=0xe1e940, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventdispatcher_glib.cpp:423 #82 0x00007f5c255a3184 in QXcbGlibEventDispatcher::processEvents (this=0xe1e940, flags=...) at /home/jarek/dev/qt-515/qtbase/src/plugins/platforms/xcb/qxcbeventdispatcher.cpp:143 #83 0x00007f5c36aad111 in QEventLoop::processEvents (this=0x7ffec7bdb8b0, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:139 #84 0x00007f5c36aad41b in QEventLoop::exec (this=0x7ffec7bdb8b0, flags=...) at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qeventloop.cpp:232 #85 0x00007f5c36ab0f9a in QCoreApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/corelib/kernel/qcoreapplication.cpp:1375 #86 0x00007f5c3725094c in QGuiApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/gui/kernel/qguiapplication.cpp:1867 #87 0x00007f5c37b3d98d in QApplication::exec () at /home/jarek/dev/qt-515/qtbase/src/widgets/kernel/qapplication.cpp:2829 #88 0x000000000040deb4 in main (argc=1, argv=0x7ffec7bdc438) at /home/jarek/dev/creator-5/src/app/main.cpp:762
- relates to
 - 
                    
QTCREATORBUG-25713 Crash on find usages
-         
 - Closed
 
 -