Fix a crash when searching again for the last 12th item

Don't connect updateFilterButton() to the
QStackedWidget::currentChanged(). Call updateFilterButton()
explicitly by the end of setCurrentIndex().

Fixes: QTCREATORBUG-26099
Change-Id: I7cba97346e1f6c73171a9b83381e271750d50f25
Reviewed-by: Eike Ziller <eike.ziller@qt.io>